--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h3>Header Logo</h3>
+        <ul>
+            <li><a href="https://www.example.com">header link one</a></li>
+            <li><a href="https://www.example.com">header link two</a></li>
+            <li><a href="https://www.example.com">header link three</a></li>
+        </ul>
+    </div>
 </body>
 </html>
