--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
             <li><a href="https://www.example.com">header link three</a></li>
         </ul>
     </div>
+
+    <div class="sec1">
+        <div class="sec-left">
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        </div>
+    
+        <div class="sec-right">
+            <p>this is a placeholder for an image</p>
+        </div>
+    </div>
 </body>
 </html>
