--- a/index.html
+++ b/index.html
@@ -56,5 +56,18 @@
         <h3>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h3>
         <p>-Thor, God of Thunder</p>
     </div>
+
+    <div class="sec4">
+        <div class="box">
+            <div class="text">
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+    
+            <div class="button">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
