--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <h3>Header Logo</h3>
+        <h3 class="logo">Header Logo</h3>
         <ul>
             <li><a href="https://www.example.com">header link one</a></li>
             <li><a href="https://www.example.com">header link two</a></li>
