--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
     <div class="sec1">
         <div class="sec-left">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <h2 class="text">This website is awesome</h2>
+            <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign Up</button>
         </div>
     
         <div class="sec-right">
