Styled title of sec1
Adjusted the HTML classes of the text in sec1 to allow it to be styled properly. The title is now white, bold, and has a font size of 48px.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="sec1">
         <div class="sec-left">
-            <h2 class="text">This website is awesome</h2>
+            <p class="title">This website is awesome</p>
             <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign Up</button>
         </div>
