--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <div class="header">
-        <p class="logo">Header Logo</p>
-        <ul>
-            <li><a href="https://www.example.com">header link one</a></li>
-            <li><a href="https://www.example.com">header link two</a></li>
-            <li><a href="https://www.example.com">header link three</a></li>
-        </ul>
+        <div class="ileft"></div>
+        <div class="imiddle">
+            <p class="logo">Header Logo</p>
+            <ul>
+                <li><a href="https://www.example.com">header link one</a></li>
+                <li><a href="https://www.example.com">header link two</a></li>
+                <li><a href="https://www.example.com">header link three</a></li>
+            </ul>
+        </div>
+        <div class="iright"></div>
     </div>
-
+    
     <div class="sec1">
         <div class="sec-left">
             <h2 class="title">This website is awesome</h2>
