Finished styling the quote section
The font style of the quote is complete, and proper spacing of the section was done.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="sec3 icontainer">
         <div class="ileft"></div>
         <div class="imiddle">
-            <h3>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h3>
+            <h3 class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h3>
             <p>-Thor, God of Thunder</p>
         </div>
         <div class="iright"></div>
