Completed styling the sign up box in sec4
Adjusted padding and margin of multiple elements for style. Changed the background color of the box to blue, and styled the font and Sign Up button.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="imiddle">
             <div class="box">
                 <div class="text">
-                    <h4>Call to action! It's time!</h4>
+                    <h4 class="bold">Call to action! It's time!</h4>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
         
