--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <div class="footer">
-        <p>Copyright @ The Odin Project 2021</p>
+        <p>Yousef Elsisy, The Odin Project 2022</p>
     </div>
 </body>
 </html>
